# code-mcp

./: README.md  _config.yml  deploy_gcf.py  dev.yml  example_usage.py  main.py  pyproject.toml  test.sh
.github/workflows/: test.yml
gcf/: main.py  requirements.txt
src/code_mcp/: __main__.py  gcf_deployer.py  server.py  server_fastmcp.py
tests/: test_gcf_deployment.py  test_gcf_handler.py  test_mcp_server.py
